--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>定番のハピタス</h2>
-    <p>https://hapitas.jp/register?i=25085746</p>
+    <a href="https://hapitas.jp/register?i=25085746">ハピタスポイント</a>
     <p>ポイ活の王道サイト、審査落ちでもポイントもらえる事多め（８割？）やりすぎには注意しよう。半年できなくなるだけだけどアマギフとか色々変えられるかな</p>
     <h2></h2>
 </body>
