--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h2>定番のハピタス</h2>
     <a href="https://hapitas.jp/register?i=25085746">ハピタスポイント</a>
-    <p>ポイ活の王道サイト、審査落ちでもポイントもらえる事多め（８割？）やりすぎには注意しよう。半年できなくなるだけだけどアマギフとか色々変えられるかな</p>
+    <p>まずはここ普通にお金落ちてる。</p>
     <h2></h2>
 </body>
 </html>
